--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<head>
-  <title>MNIST Digit Recognition Demonstration</title>
-  <link href="/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="/css/app.css" rel="stylesheet" />
-  <script>
+<!doctype html>
+<html lang="en">
+  <head>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/app.css" rel="stylesheet" />
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-H0NW5Z2MYC');
     </script>
-</head>
+    <title>MNIST Demonstration</title>
+  </head>
+
   <body class="bg-dark text-black" style="background-color: #dae2f0;">
-    <center>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js"></script>
-    <h3 class="card-title text-white">MNIST Recognition Demonstration</h3><br>
-    <div class="card w-50 text-black" style="max-width: 700px;">
-      <div class="card-body">
-        <p class="card-text text-left" style="font-family:'Courier New', monospace">
-          This webapp will analyze and decide which number a user draws in the box below. The model was trained on the MNIST number image set, and uses the model architecture described in Francis Chollet's "Deep Learning with Python" (also available on the Keras documentation <a href="https://keras.io/examples/mnist_cnn/">here</a>). Use your mouse to click and draw an arabic digit below (0-9) and Keras will decide what you drew!.<br>
+    <h3 class="card-title text-white" style="font-family:'Courier New', monospace">Digit Recognition WebApp</h3>
     <div id="paint">
       <canvas id="myCanvas"></canvas>
     </div>
     <div id="predicted">
-      Predicted input digit
+      Recognized digit
       <div id="number"></div>
       <button id="clear">Clear</button>
     </div>
@@ -46,6 +42,7 @@
     cw = $('#number').width();
     $('#number').css({'height': cw + 'px'});
 
+    // From https://www.html5canvastutorials.com/labs/html5-canvas-paint-application/
     var canvas = document.getElementById('myCanvas');
     var context = canvas.getContext('2d');
 
@@ -134,11 +131,5 @@
       $('#number').html('');
     });
     </script>
-  </center>
   </body>
-  <footer class="footer">
-    <div class="container" style="font-family:'Courier New', monospace">
-      <span class="text-muted">Created by  <a href="mailto:nicholas.lunsford@westpoint.edu">Nicholas Lunsford</a>. Source code available in <a href="https://github.com/westpoint-neural-networks/homework-4">Github</a>.</span>
-    </div>
-  </footer>
 </html>
