--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="bg-dark text-black" style="background-color: #dae2f0;">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js"></script>
-    <h3 class="card-title text-white" style="font-family:'Courier New', monospace">Digit Recognition WebApp</h3>
+    <h3 class="text-white" style="font-family:'Courier New', monospace">Digit Recognition WebApp</h3>
     <div id="paint">
       <canvas id="myCanvas"></canvas>
     </div>
