--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <title>MNIST Demonstration</title>
   </head>
 
-  <body class="bg-dark text-black" style="background-color: #dae2f0;">
+  <body class="bg-dark text-white" style="background-color: #dae2f0;">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js"></script>
-    <h3 class="text-white" style="font-family:'Courier New', monospace">Digit Recognition WebApp</h3>
+    <h3 class="text-white" style="font-family:'Courier New', monospace">MNIST Digit Recognizer</h3>
+    <br>
+    <div class="card w-50 text-black" style="max-width: 700px;">
+      <div class="card-body">
+        <p class="card-text text-left" style="font-family:'Courier New', monospace"> The MNIST number dataset is a common toy dataset used to teach deep learning methods. In this application, a model trained on the MNIST number dataset (following the architecture described by Francis Challet in "Deep Learning with Python" and available <a href="https://keras.io/examples/mnist_cnn/">here), will try to determine which digit you drew in the block below.<br>
+        <p class="card-text text-left" style="font-family:'Courier New', monospace">Click and drag your cursor in the box below, or use your touchscreen, to draw a single numerical digit.<br>
+      </div>
+    </div>
     <div id="paint">
       <canvas id="myCanvas"></canvas>
     </div>
