--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <h3 class="text-white" style="font-family:'Courier New', monospace">MNIST Digit Recognizer</h3>
     <br>
     <div class="card w-50 text-black" style="max-width: 700px;">
+      <center>
       <div class="card-body">
-        <p class="card-text text-left" style="font-family:'Courier New', monospace"> The MNIST number dataset is a common toy dataset used to teach deep learning methods. In this application, a model trained on the MNIST number dataset (following the architecture described by Francis Challet in "Deep Learning with Python" and available <a href="https://keras.io/examples/mnist_cnn/">here), will try to determine which digit you drew in the block below.<br>
+        <p class="card-text text-left text-black" style="font-family:'Courier New', monospace"> The MNIST number dataset is a common toy dataset used to teach deep learning methods. In this application, a model trained on the MNIST number dataset (following the architecture described by Francis Challet in "Deep Learning with Python" and available <a href="https://keras.io/examples/mnist_cnn/">here</a>), will try to determine which digit you drew in the block below.<br>
         <p class="card-text text-left" style="font-family:'Courier New', monospace">Click and drag your cursor in the box below, or use your touchscreen, to draw a single numerical digit.<br>
       </div>
+      </center>
     </div>
+    <br>
     <div id="paint">
       <canvas id="myCanvas"></canvas>
     </div>
