--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>MNIST Demonstration</title>
   </head>
 
-  <body class="bg-dark text-white" style="background-color: #dae2f0;">
+  <body class="bg-dark text-black" style="background-color: #dae2f0;">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.5.2/dist/tf.min.js"></script>
     <h3 class="text-white" style="font-family:'Courier New', monospace">MNIST Digit Recognizer</h3>
