--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       <div id="number"></div>
       <button id="clear">Clear</button>
     </div>
+    <center>
+      <footer class="footer">
+      <div class="container" style="font-family:'Courier New', monospace">
+        <span class="text-muted">Created by  <a href="mailto:nicholas.lunsford@westpoint.edu">Nicholas Lunsford</a>. Source code available in <a href="https://github.com/westpoint-neural-networks/homework-4">Github</a>.</span>
+    </div>
+  </footer>
+    </center>
     <script>
     var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
     if (isMobile) {
