--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </center>
     <br>
     <div id="paint">
-      <canvas id="myCanvas"></canvas>
+      <canvas id="myCanvas" class="bg-white"></canvas>
     </div>
     <div id="predicted">
       Recognized digit
