--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     </div>
     </center>
     <br>
-    <div id="paint">
-      <canvas id="myCanvas" class="bg-white"></canvas>
-    </div>
-    <div id="predicted">
-      Recognized digit
-      <div id="number"></div>
-      <button id="clear">Clear</button>
+    <div>
+      <div id="paint" style='display: inline-block; vertical-align: top;'>
+        <canvas id="myCanvas" class="bg-white"></canvas>
+      </div>
+      <div id="predicted" style='display: inline-block; vertical-align: top;'>
+        <div id="number" class="text-white"></div>
+        <button id="clear">Clear</button>
+      </div>
     </div>
     <center>
       <footer class="footer">
