--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     </center>
     <br>
-    <div>
+    <div style='float: center;'>
       <div id="paint" style='display: inline-block; vertical-align: top;'>
         <canvas id="myCanvas" class="bg-white"></canvas>
       </div>
