--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
     </center>
     <br>
-    <div style='float: center;'>
+    <center>
+    <div>
       <div id="paint" style='display: inline-block; vertical-align: top;'>
         <canvas id="myCanvas" class="bg-white"></canvas>
       </div>
@@ -35,7 +36,6 @@
         <button id="clear">Clear</button>
       </div>
     </div>
-    <center>
       <footer class="footer">
       <div class="container" style="font-family:'Courier New', monospace">
         <span class="text-muted">Created by  <a href="mailto:nicholas.lunsford@westpoint.edu">Nicholas Lunsford</a>. Source code available in <a href="https://github.com/westpoint-neural-networks/homework-4">Github</a>.</span>
