--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="card w-50 text-black" style="max-width: 700px;">
       <div class="card-body">
         <p class="card-text text-left text-black" style="font-family:'Courier New', monospace"> The MNIST number dataset is a common toy dataset used to teach deep learning methods. In this application, a model trained on the MNIST number dataset (following the architecture described by Francis Challet in "Deep Learning with Python" and available <a href="https://keras.io/examples/mnist_cnn/">here</a>), will try to determine which digit you drew in the block below.<br>
-        <p class="card-text text-left" style="font-family:'Courier New', monospace">Click and drag your cursor in the box below, or use your touchscreen, to draw a single numerical digit.<br>
+        <p class="card-text text-left" style="font-family:'Courier New', monospace">Click and drag your cursor in the box to the lower left, or use your touchscreen, to draw a single numerical digit.<br>
       </div>
     </div>
     </center>
@@ -34,8 +34,8 @@
       <div id="predicted" style='display: inline-block; vertical-align: top;'>
         <div id="number" class="text-white"></div>
       </div>
-      <button id="clear">Clear</button>
     </div>
+    <button id="clear">Clear</button>
       <footer class="footer">
       <div class="container" style="font-family:'Courier New', monospace">
         <span class="text-muted">Created by  <a href="mailto:nicholas.lunsford@westpoint.edu">Nicholas Lunsford</a>. Source code available in <a href="https://github.com/westpoint-neural-networks/homework-4">Github</a>.</span>
